--- a/web/sass/screen.scss
+++ b/web/sass/screen.scss
@@ -1,6 +1,7 @@
 // css3 animations
 
-.center {
+.center,
+.logo {
     transition: all 600ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -43,12 +44,6 @@ body {
     overflow-y: scroll;
 }
 
-// fitvids
-
-.fit-video {
-    width: 100%;
-}
-
 // custom colors
 
 $background: #ffffff;
@@ -79,11 +74,46 @@ body {
 
 // header
 
-.logo {
-    font-size: 200px;
+header {
+    position: fixed;
+    z-index: 2;
+    top: 0;
+
+    .logo {
+        font-size: 200px;
+    }
+}
+
+// main
+
+.main {
+    .row {
+        float: left;
+        width: 100%;
+        height: 100%;
+        position: relative;
+
+        .tile {
+            float: left;
+            width: 100%;
+        }
+
+        &#home {
+            position: fixed;
+        }
+    }
+}
+
+// footer
+
+footer {
+    float: left;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 // imports
 
-@import "grid.scss";
-@import "print.scss";
+@import 'grid.scss';
+@import 'print.scss';
