--- a/web/sass/screen.scss
+++ b/web/sass/screen.scss
@@ -125,6 +125,52 @@ footer {
     overflow: hidden;
 }
 
+// progress
+
+progress {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    height: .25em;
+    -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+    border: none;
+    background-color: transparent;
+    color: red;
+}
+
+progress::-webkit-progress-bar {
+    background-color: transparent;
+}
+
+.flat::-webkit-progress-value {
+    background-color: #F7A21B;
+}
+
+.flat::-moz-progress-bar {
+    background-color: #F7A21B;
+}
+
+.progress-container {
+    width: 100%;
+    background-color: transparent;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: .25em;
+    display: block;
+}
+
+.progress-bar {
+    background-color: #F7A21B;
+    width: 50%;
+    display: block;
+    height: inherit;
+}
+
 // imports
 
 @import 'grid.scss';
