--- a/web/sass/screen.scss
+++ b/web/sass/screen.scss
@@ -93,7 +93,7 @@ header {
         letter-spacing: -4px;
         font-weight: normal;
         font-style: italic;
-        margin-bottom: 0;
+        margin: 100px 0 0 0;
     }
 }
 
@@ -110,8 +110,6 @@ header {
         .tile {
             float: left;
             width: 100%;
-            background: $background;
-            background: lighten($background, 3%);
             overflow: hidden;
         }
 
@@ -120,6 +118,8 @@ header {
         }
     }
 
+    // title
+
     h2 {
         font-size: 73px;
         line-height: 73px;
@@ -127,16 +127,36 @@ header {
         font-weight: normal;
         font-style: italic;
         margin-bottom: 0;
-        background: url(../img/zigzag.png) 0 center;
 
         a {
             color: $background;
         }
+    }
 
-        &:hover {
+    p {
+        padding: 10px 50px;
+        display: inline-block;
+        background: url(../img/zigzag.png) 0 center;
+
+         &:hover {
             -webkit-animation: zigzag 100ms linear infinite;
             animation: zigzag 100ms linear infinite;
         }
+    }
+}
+
+// projects
+
+.projects {
+    float: left;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+
+    li {
+        float: left;
+        width: 100%;
     }
 }
 
@@ -146,38 +166,10 @@ footer {
     float: left;
     width: 100%;
     position: relative;
-    background: lighten($background, 5%);
     overflow: hidden;
 }
 
 // progress
-
-progress {
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 100;
-    width: 100%;
-    height: .25em;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border: none;
-    background-color: transparent;
-    color: $accent2;
-
-    &::-webkit-progress-bar {
-        background-color: transparent;
-    }
-
-    &::-webkit-progress-value {
-        background-color: $accent2;
-    }
-
-    &::-moz-progress-bar {
-        background-color: $accent2;
-    }
-}
 
 .progress-container {
     width: 100%;
@@ -185,15 +177,16 @@ progress {
     position: fixed;
     top: 0;
     left: 0;
-    height: .25em;
+    height: 100%;
     display: block;
-}
 
-.progress-bar {
-    background-color: #F7A21B;
-    width: 50%;
-    display: block;
-    height: inherit;
+    .progress-bar {
+        background-color: lighten($background, 2%);
+        width: 0%;
+        display: block;
+        height: 100%;
+        // transition: all 100ms linear;
+    }
 }
 
 @-webkit-keyframes zigzag {
