--- a/web/sass/screen.scss
+++ b/web/sass/screen.scss
@@ -86,6 +86,7 @@ header {
     position: fixed;
     z-index: 2;
     top: 0;
+    pointer-events: none;
 
     .logo {
         font-size: 73px;
@@ -129,7 +130,7 @@ header {
         margin-bottom: 0;
 
         a {
-            color: $background;
+            color: $light;
         }
     }
 
@@ -157,6 +158,7 @@ header {
     li {
         float: left;
         width: 100%;
+        text-align: right;
     }
 }
 
@@ -179,6 +181,9 @@ footer {
     left: 0;
     height: 100%;
     display: block;
+    opacity: 0.9;
+    z-index: 2;
+    pointer-events: none;
 
     .progress-bar {
         background-color: lighten($background, 2%);
