--- a/web/sass/screen.scss
+++ b/web/sass/screen.scss
@@ -3,6 +3,7 @@
 .center,
 .logo,
 .description,
+#loading,
 body a {
     transition: all 600ms cubic-bezier(0.19, 1, 0.22, 1);
 }
@@ -84,11 +85,49 @@ body {
     }
 }
 
+.title {
+    font-family: 'Times New Roman';
+}
+
+// loading
+
+#loading {
+    background: $background;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1000000000;
+    opacity: 0;
+    pointer-events: none;
+
+    &.active {
+        opacity: 1;
+        pointer-events: all;
+    }
+
+    .loading-activity {
+        display: block;
+        position: fixed;
+        z-index: 2000;
+        top: 50%;
+        left: 50%;
+        width: 220px;
+        height: 20px;
+        margin-top: -10px;
+        margin-left: -110px;
+        background: url(../img/zigzag.png) 0 center;
+        -webkit-animation: zigzag 100ms linear infinite;
+        animation: zigzag 100ms linear infinite;
+    }
+}
+
 // header
 
 header {
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     top: 0;
 
     .logo {
@@ -235,6 +274,18 @@ footer {
         display: block;
         height: 100%;
     }
+}
+
+// loading keyframe animation
+
+@-webkit-keyframes load-spinner {
+    0% {-webkit-transform: rotate(0deg);}
+    100% {-webkit-transform: rotate(360deg);}
+}
+
+@keyframes load-spinner {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
 }
 
 // zigzag keyframe animation
