--- a/web/sass/grid.scss
+++ b/web/sass/grid.scss
@@ -111,4 +111,12 @@ img {
 */
 
 @media screen and (max-width: 719px) {
+    header span,
+    .projects {
+        display: none;
+    }
+
+    body {
+        overflow: hidden;
+    }
 }
