--- a/web/sass/screen.scss
+++ b/web/sass/screen.scss
@@ -128,7 +128,9 @@ body {
 header {
     position: fixed;
     z-index: 4;
-    top: 0;
+    width: auto;
+    margin: 0 5.55555%;
+    top: 10.55555%;
 
     .logo {
         font-size: 73px;
@@ -136,7 +138,7 @@ header {
         letter-spacing: -4px;
         font-weight: normal;
         font-style: italic;
-        margin: 100px 0 0 0;
+        margin: 0;
 
         a {
             pointer-events: none;
@@ -197,7 +199,7 @@ header {
 }
 
 .special {
-    margin-top: 100px;
+    margin-top: 73px;
     padding: 10px 73px 10px 10px;
     display: inline-block;
     background: url(../img/zigzag.png) 0 center;
