--- a/web/sass/screen.scss
+++ b/web/sass/screen.scss
@@ -235,7 +235,7 @@ header {
 .projects {
     float: right;
     margin: 0 5.55555%;
-    padding: 0 12px;
+    padding: 12px;
     list-style-type: none;
     width: 50%;
 
@@ -252,7 +252,7 @@ header {
                 display: block;
                 position: absolute;
                 z-index: 2000;
-                bottom: -10px;
+                bottom: 0;
                 left: 0;
                 width: 100%;
                 height: 10px;
