--- a/web/sass/screen.scss
+++ b/web/sass/screen.scss
@@ -381,7 +381,7 @@ footer {
         float: left;
         width: auto;
         margin: 0 20px;
-        padding: 0;
+        padding: 0 0 40px 0;
 
         li {
             text-align: left;
